# swoon

./: Cargo.toml  README.md
src/: bake.rs  init.rs  main.rs
src/ansible/: archetype.yml  mod.rs
src/ansible/roles/: firewall.yml
src/api/: binaries.rs  command.rs  config.rs  context.rs  mod.rs  process.rs  swoon.full.yml.liquid  swoon.yml.liquid  task.rs  template.rs  util.rs
src/api/output/: file.rs  template.rs
src/gcloud/: cli.rs
src/images/: mod.rs
src/packer/: build.pkr.hcl.liquid  config.rs  gcp.pkr.hcl.liquid  mod.rs  source.gcp.pkr.hcl.liquid
tests/: init_test.rs
