[package]
name = "swoon"
version = "0.1.3"
authors = [
    "Adam McKee <adam.be.g84d@gmail.com>",
]
keywords = ["aws", "cloud", "devops", "gcp", "happy"]
homepage = "https://github.com/eighty4/swoon"
documentation = "https://github.com/eighty4/swoon"
repository = "https://github.com/eighty4/swoon"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = "2.34.0"
console = "0.15.0"
dialoguer = "0.9.0"
liquid = "0.23.1"
which = "4.2.2"
yaml-rust = "0.4.5"
