[package]
name = "swoon"
version = "0.1.7"
authors = [
    "Adam McKee <adam.be.g84d@gmail.com>",
]
keywords = ["aws", "cloud", "devops", "gcp", "happy"]
homepage = "https://github.com/eighty4/swoon"
documentation = "https://github.com/eighty4/swoon"
repository = "https://github.com/eighty4/swoon"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = "3.1.15"
console = "0.15.0"
dialoguer = "0.10.0"
futures = "0.3.21"
liquid = "0.26.0"
which = "4.2.5"
yaml-rust = "0.4.5"

[dev-dependencies]
assert_cmd = "2.0.4"
tempdir = "0.3.7"
